force-app/main/default/objects/Training_Record__c/Training_Record__c.object-meta.xml
<CustomObject>
    <description>Operator and maintenance training records for commissioning and handover, tracking topic, trainee, and competency verification.</description>
    <label>Training Record</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Training Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>