force-app/main/default/objects/Training_Record__c/fields/Competency_Verified__c.field-meta.xml
<CustomField>
    <fullName>Competency_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competency Verified</label>
    <type>Checkbox</type>
</CustomField>