force-app/main/default/objects/Training_Record__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>