force-app/main/default/objects/Training_Record__c/fields/Trainee__c.field-meta.xml
<CustomField>
    <fullName>Trainee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Training Records</relationshipLabel>
    <relationshipName>Training_Records_Trainee</relationshipName>
    <type>Lookup</type>
</CustomField>